<resources>
    <string name="app_name">tareaSQLite</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>

    <string name="tvId">Id</string>
    <string name="tvNombre">Nombre</string>
    <string name="tvPrecio">Precio</string>
    <string name="tvStock">Stock</string>
    <string name="tvDescripcion">Descripción</string>

    <string name="btInsertar">Insertar</string>
    <string name="btModificar">Modificar</string>
    <string name="btEliminar">Eliminar</string>
    <string name="btConsultar">Buscar</string>


    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
</resources>